<!--
  ~  Copyright 2018 Information and Computational Sciences,
  ~  The James Hutton Institute.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/preferences_title_general">
		<Preference
			android:key="Prefs.Delete.Row.Token"
			android:summary="@string/preferences_delete_row_token_summary"
			android:title="@string/preferences_delete_row_token_title"
			android:icon="@drawable/preferences_delete_row" />
		<Preference
			android:key="Prefs.Delete.Cell.Token"
			android:summary="@string/preferences_delete_cell_token_summary"
			android:title="@string/preferences_delete_cell_token_title"
			android:icon="@drawable/preferences_delete_barcode" />
		<Preference
			android:key="Prefs.Null.Token"
			android:summary="@string/preferences_null_token_summary"
			android:title="@string/preferences_null_token_title"
			android:icon="@drawable/preferences_skip" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_title_appearance">
		<SwitchPreference
			android:dialogTitle="@string/preferences_theme_title"
			android:key="Prefs.Appearance.Theme"
			android:summaryOff="@string/preferences_theme_summary_off"
			android:summaryOn="@string/preferences_theme_summary_on"
			android:switchTextOff="@string/general_no"
			android:switchTextOn="@string/general_yes"
			android:title="@string/preferences_theme_title"
			android:icon="@drawable/preferences_theme" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_title_misc">
		<SwitchPreference
			android:dialogTitle="@string/preferences_read_back_title"
			android:key="Prefs.Voice.Feedback"
			android:switchTextOff="@string/general_no"
			android:switchTextOn="@string/general_yes"
			android:title="@string/preferences_read_back_title"
			android:icon="@drawable/preferences_voice_feedback" />
		<SwitchPreference
			android:key="Prefs.Url.Open.External"
			android:title="@string/preferences_url_external_title"
			android:summary="@string/preferences_url_external_summary"
			android:icon="@drawable/preferences_url" />
		<Preference
			android:key="Prefs.Export.Barcode.Properties"
			android:title="@string/preferences_export_title"
			android:summary="@string/preferences_export_summary"
			android:icon="@drawable/preferences_export_format" />
		<Preference
			android:key="Prefs.Show.Changelog"
			android:title="@string/preferences_changelog_title"
			android:summary="@string/preferences_changelog_summary"
			android:icon="@drawable/preferences_changelog" />
		<Preference
			android:key="Prefs.Show.Eula"
			android:title="@string/preferences_eula_title"
			android:summary="@string/preferences_eula_summary"
			android:icon="@drawable/preferences_eula" />
		<SwitchPreference
			android:dialogTitle="@string/preferences_ga_opt_out_title"
			android:key="Prefs.Google.Analytics.Opt.Out"
			android:switchTextOff="@string/general_no"
			android:switchTextOn="@string/general_yes"
			android:title="@string/preferences_ga_opt_out_title"
			android:summary="@string/preferences_ga_opt_out_message"
			android:icon="@drawable/preferences_ga_opt_out" />
	</PreferenceCategory>

</PreferenceScreen>