<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright 2018 Information and Computational Sciences,
  ~  The James Hutton Institute.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/drawer_menu_visit_homepage"
		android:checked="true"
		android:icon="?attr/drawerMenuHomepage"
		android:title="@string/menu_visit_homepage" />
	<item
		android:id="@+id/drawer_menu_online_help"
		android:checked="true"
		android:icon="?attr/drawerMenuOnlineHelp"
		android:title="@string/menu_online_help" />
	<item
		android:id="@+id/drawer_menu_datasets"
		android:icon="?attr/drawerMenuDatasets"
		android:title="@string/menu_datasets" />
	<item
		android:id="@+id/drawer_menu_settings"
		android:checked="true"
		android:icon="?attr/drawerMenuSettings"
		android:title="@string/menu_settings" />
	<item
		android:id="@+id/drawer_menu_map"
		android:checked="true"
		android:icon="?attr/drawerMenuMap"
		android:title="@string/menu_map" />
	<item
		android:id="@+id/drawer_menu_about"
		android:checked="true"
		android:icon="?attr/drawerMenuAbout"
		android:title="@string/menu_about" />

</menu>