<!--
  ~  Copyright 2018 Information and Computational Sciences,
  ~  The James Hutton Institute.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<androidx.drawerlayout.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:keepScreenOn="true"
			android:orientation="vertical">

			<!-- THIS HAS TO GO INTO ANY LAYOUT OF ANY ACTIVITY THAT HAS A TOOLBAR! -->
			<include layout="@layout/helper_toolbar" />
			<!-- END -->

			<androidx.coordinatorlayout.widget.CoordinatorLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/fab_parent">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:background="?attr/inputTextColor">

						<EditText
							android:id="@+id/input"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:clickable="false"
							android:cursorVisible="false"
							android:inputType="textVisiblePassword"
							android:paddingLeft="@dimen/activity_horizontal_margin"
							android:paddingRight="@dimen/activity_horizontal_margin"
							android:paddingTop="@dimen/activity_vertical_margin" />

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:contentDescription="@string/accessibility_shadow"
							android:scaleType="fitXY"
							android:src="@drawable/shadow_top" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/welcome_message"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="center_horizontal"
						android:layout_margin="8dp"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?attr/listItemBackground"
							android:layout_gravity="center_horizontal"
							android:padding="8dp"
							android:gravity="bottom"
							android:textSize="16sp"
							android:maxWidth="500dp"
							android:text="@string/introduction_message" />

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?attr/listItemBackground"
							android:layout_gravity="center_horizontal"
							android:padding="8dp"
							android:layout_marginTop="8dp"
							android:layout_marginBottom="8dp"
							android:gravity="bottom"
							android:textSize="16sp"
							android:maxWidth="500dp"
							android:text="@string/introduction_message_screen_lock" />

					</LinearLayout>

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/grid_scanned_items"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scrollbars="vertical" />

				</LinearLayout>

				<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:id="@+id/floating_action_main"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:borderWidth="0dp"
					android:layout_gravity="bottom|end"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:layout_marginEnd="@dimen/activity_horizontal_margin"
					android:layout_marginBottom="@dimen/activity_vertical_margin"
					app:srcCompat="@drawable/menu_barcode" />
			</androidx.coordinatorlayout.widget.CoordinatorLayout>
		</LinearLayout>

	</FrameLayout>

	<!-- THIS HAS TO GO INTO ANY LAYOUT OF ANY ACTIVITY THAT EXTENDS DrawerActivity! -->
	<include layout="@layout/helper_drawer" />
	<!-- END -->

</androidx.drawerlayout.widget.DrawerLayout>